RESOLVED FIXED88991
[Qt] Fixed visible content rect lost during page-load
https://bugs.webkit.org/show_bug.cgi?id=88991
Summary [Qt] Fixed visible content rect lost during page-load
Allan Sandfeld Jensen
Reported 2012-06-13 05:20:03 PDT
In some cases the fixed visible content rect is set before the page is fully loaded, and then lost when transitioning to the commited page.
Attachments
Patch (1.57 KB, patch)
2012-06-13 05:22 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-06-13 05:22:17 PDT
WebKit Review Bot
Comment 2 2012-06-13 09:38:56 PDT
Comment on attachment 147296 [details] Patch Clearing flags on attachment: 147296 Committed r120218: <http://trac.webkit.org/changeset/120218>
WebKit Review Bot
Comment 3 2012-06-13 09:39:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.