[Qt] Fixed visible content rect lost during page-load https://bugs.webkit.org/show_bug.cgi?id=88991

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-06-13
Reviewed by Kenneth Rohde Christiansen.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage):

Canonical link: https://commits.webkit.org/106839@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120218 268f45cc-cd09-0410-ab3c-d52691b4dbfc